Finish the structure of the project

--- a/index.html
+++ b/index.html
@@ -5,40 +5,78 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Google</title>
         <link rel="shortcut icon" type="image/png" href="./images/google-favicon.png" />
-        <lin rel="stylesheet" type="text/css" href="./css/main.css" />
+        <link rel="stylesheet" type="text/css" href="./css/main.css" />
     </head>
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><a href="#">Gmail</a></li>
-                    <li><a href="#">Images</a></li>
-                    <li style="color: red;">ICON GOOGLE</li>
-                    <li>Sign in</li>
+                <ul class="nav-right-section">
+                    <li>
+                        <a href="#">Gmail</a>
+                    </li>
+                    <li>
+                        <a href="#">Images</a>
+                    </li>
+                    <li class="menu-icon">
+                        <a href="#"></a>
+                    </li>
+                    <li class="sign-in">
+                        <a href="#">Sign in</a>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <img />
-            <form>
-                <input />
-            </form>
-            <button></button>
-            <button></button>
-            <p>Google offered in: <a href="#">Español (Latinoamérica)</a></p>
+            <section class="main-logo">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7GehYKdImLiMpzSon3pKKLVhwGS_S4Ssjj9WHNIfUYXZiyrzk7w&s" alt="logo" />
+            </section>
+            <section class="main-input">
+                <div class="main-input-container">
+                    <span class="search-icon"></span>
+                    <input type="text" />
+                    <a class="micro-icon" href="#"></a>
+                </div>            
+            </section>
+            <section class="main-buttons">    
+                <div>
+                    <button>Google Search</button>
+                </div>
+                <div>
+                    <button>I'm Feeling Lucky</button>
+                </div>
+            </section>
+            <section>
+                <p>Google offered in: 
+                    <a href="#">Español (Latinoamérica)</a>
+                </p>
+            </section>
         </main>
         <footer>
-            </hr>
-                <p>Colombia</p>
-            </hr>
-                <p>Advertising</p>
-                <p>Business</p>
-                <p>About</p>
-                <p>How Search works</p>
-                <p>Privacy</p>
-                <p>Terms</p>
-                <p>Settings</p>
+                <ul class="footer-left">
+                    <li>
+                        <a href="#">Advertising</a>
+                    </li>
+                    <li>
+                        <a href="#">Business</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">How Search works</a>
+                    </li>
+                </ul>
+                <ul class="footer-right">
+                    <li>
+                        <a href="#">Privacy</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms</a>
+                    </li>
+                    <li>
+                        <a href="#">Settings</a>
+                    </li>
+                </ul>
         </footer>
     </body>
 </html>
-
