Modify favicon link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Google</title>
-        <link rel="shortcut icon" type="image/png" href="http://vignette4.wikia.nocookie.net/google/images/c/c6/Favicon_2015.jpeg/revision/latest?cb=20151002232746" />
+        <link rel="shortcut icon" type="image/png" href="https://cdn3.iconfinder.com/data/icons/google-suits-1/32/1_google_search_logo_engine_service_suits-512.png" />
         <link rel="stylesheet" type="text/css" href="./css/main.css" />
     </head>
     <body>
